[gd_scene load_steps=12 format=3 uid="uid://d0u83fayrvkma"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_aau14"]
[ext_resource type="PackedScene" uid="uid://ch330pk0oenh4" path="res://Assets/animations/player/player_animator.tscn" id="2_qp5da"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uxrvj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7yj43"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0ha6k"]
material = SubResource("StandardMaterial3D_7yj43")

[sub_resource type="BoxMesh" id="BoxMesh_bbe8x"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bxnod"]
albedo_color = Color(0.572669, 1.1792e-06, 3.36915e-07, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ourk7"]
material = SubResource("StandardMaterial3D_bxnod")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k8jvy"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_y683d"]
material = SubResource("StandardMaterial3D_k8jvy")

[sub_resource type="BoxShape3D" id="BoxShape3D_plcyi"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("animator")]
transform = Transform3D(3.455, 0, 0, 0, 3.455, 0, 0, 0, 3.455, 0, 1.34545, 0)
collision_mask = 7
script = ExtResource("1_aau14")
animator = NodePath("Player_Animator")

[node name="Body" type="CollisionShape3D" parent="."]
transform = Transform3D(0.290434, 0, 0, 0, 0.290434, 0, 0, 0, 0.290434, 0, 0, 0)
visible = false
shape = SubResource("CapsuleShape3D_uxrvj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body"]
mesh = SubResource("CapsuleMesh_0ha6k")

[node name="Amogus" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.667934, 0, 0, 0, 0.322592, 0, 0, 0, 0.550739, 0.296423, 0.512443, 0)
mesh = SubResource("BoxMesh_bbe8x")

[node name="Amogus pt2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.35513, 0, 0, 0, 0.715141, 0, 0, 0, 0.603473, -0.499764, 0.218688, 0)
mesh = SubResource("BoxMesh_ourk7")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.382195, 0, 0, 0, 0.358733, 0, 0, 0, 0.382195, 0, -0.969992, -0.257169)
mesh = SubResource("CapsuleMesh_y683d")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.382195, 0, 0, 0, 0.358733, 0, 0, 0, 0.382195, 0, -0.970359, 0.267917)
mesh = SubResource("CapsuleMesh_y683d")

[node name="PickupArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0375558, 0, -0.0871775)
collision_mask = 6

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupArea"]
shape = SubResource("BoxShape3D_plcyi")

[node name="CarryTeaMarker" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0.258454, 0, 0)

[node name="Player_Animator" parent="." instance=ExtResource("2_qp5da")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.149636, 0)

[connection signal="area_entered" from="PickupArea" to="." method="_on_pickup_area_area_entered"]
[connection signal="area_exited" from="PickupArea" to="." method="_on_pickup_area_area_exited"]
[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="_on_pickup_area_body_exited"]
